[package]
name = "anymap"
version = "0.12.1"
authors = ["Chris Morgan <rust@chrismorgan.info>"]
edition = "2018"
rust-version = "1.34"
description = "A safe and convenient store for one value of each type"
repository = "https://github.com/chris-morgan/anymap"
keywords = ["container", "any", "map"]
categories = ["rust-patterns", "data-structures"]
license = "BlueOak-1.0.0 OR MIT OR Apache-2.0"
exclude = ["test", "benches", ".travis.yml", ".gitignore"]
